force-app/main/default/objects/Weather__c/fields/distance__c.field-meta.xml
<CustomField>
    <fullName>distance__c</fullName>
    <label>distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>