force-app/main/default/objects/Weather__c/fields/latt_long__c.field-meta.xml
<CustomField>
    <fullName>latt_long__c</fullName>
    <label>latt_long</label>
    <length>50</length>
    <type>Text</type>
</CustomField>