force-app/main/default/objects/Weather__c/fields/location_type__c.field-meta.xml
<CustomField>
    <fullName>location_type__c</fullName>
    <label>location type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>