force-app/main/default/objects/Weather__c/fields/woeid__c.field-meta.xml
<CustomField>
    <fullName>woeid__c</fullName>
    <label>woeid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>